addons/care_config_relaunch_v2/static/src/css/care_multistep.css
/* ... */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form_inside_row > div:nth-child(2) {
    padding: 0 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form_inside_row div.row.billing-fields {
    padding 0 !important;
    margin: 0 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method > div:nth-child(1) {
    padding: 0;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method {
    margin-top: 24.5px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method #aq3 label {
    font-weight: normal;
    color: #898989 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method #aq3 label.un-focused.empty {
    font-weight: normal;
    color: #222 !important;
}

/* payment acquirer boxes */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#order_total .text-right {
    margin-bottom: 0px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.oe_cart table td:nth-last-child(1),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.oe_cart table td:nth-last-child(2) {
    height: auto !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
ul.nav.nav-tabs li {
    height: 134px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
ul.nav.nav-tabs li .tab-acquirer-image {
    padding-top: 10px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.tab-content {
    border: 0px solid transparent !important;
    padding: 0px !important;
    padding-top: 20px !important;
}

/* Nav-tabs overrides */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method ul.nav.nav-tabs li {
    overflow: hidden !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method ul.nav.nav-tabs li span {
    word-break: normal !important;
}

@media only screen and (max-width: 480px) {
    body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
    #payment_method ul.nav.nav-tabs li {
        width: 33.33%;
        height: 120px !important;
    }
}

@media only screen and (max-width: 360px) {
    body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
    #payment_method ul.nav.nav-tabs li {
        width: 50%;
    }
}


/* Acquirer messages */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.acquirer_pre_msg {
    font-size: 20px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.acquirer_pre_msg * {
    font-family: 'Fira Sans Condensed' !important;
    font-size: 16px !important;
    color: black !important;
}

/* Acquirer IBAN */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"],
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#aq7 > div:nth-child(5) > label
{
    font-weight: normal !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"].un-focused:not(.empty),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#aq7 > div:nth-child(5) > label:not(.empty),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"].is-focused.empty
{
    color: #898989 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"].control-label:not(.un-focused):not(.is-focused),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"].control-label.empty:not(.is-focused),
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"].control-label.empty.un-focused
{
    color: #222 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban::-webkit-input-placeholder {
/* WebKit browsers */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban:-moz-placeholder {
/* Mozilla Firefox 4 to 18 */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban::-moz-placeholder {
/* Mozilla Firefox 19+ */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban:-ms-input-placeholder {
/* Internet Explorer 10+ */
    color: transparent;
}
/* ... */

